k8s/acheeve.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acheeve-deployment
  labels:
    app: acheeve
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acheeve
  template:
    metadata:
      labels:
        app: acheeve
    spec:
      containers:
        - name: acheeve
          image: registry.gitlab.com/acheeve.app/acheeve
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
