k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: acheeve-service
spec:
  selector:
    app: acheeve
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31111
