k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acheeve-service
spec:
  selector:
    app: acheeve
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
